--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<link href="font/css/all.css" rel="stylesheet">
-		
 		<link rel="stylesheet" href="style.css">
+		<title>Søkemotoroptimalisering</title>
 	</head>
 	<body>
 		<script>
@@ -48,7 +48,7 @@
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="Bilde">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -58,7 +58,7 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="Bilde">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -68,7 +68,7 @@
 				<header>
 					<h1>Overskrift 3</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="Bilde">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -78,7 +78,7 @@
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="Bilde">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -88,7 +88,7 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/400/400">
+				<img src="https://picsum.photos/400/400" alt="Bilde">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
