--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<link href="font/css/all.css" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 		<title>Søkemotoroptimalisering</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Dette er en nettside laget for å øve på søkemotoroptimalisering.">
+		<meta name="keywords" content="HTML,CSS,JavaScript,SEO,Søkemotoroptimalisering,Webutvikling">
 	</head>
 	<body>
 		<script>
