--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	
 			</ul>
 		</nav>
-		<div id="main">
+		<main id="main">
 			<article id="item-1">
 				<header>
 					<h1>Overskrift 1</h1>
@@ -98,8 +98,8 @@
 				</p>
 				<a>Les mer</a>
 			</article>
-		</div>
-		<div id="aside">
+		</main>
+		<aside id="aside">
 			<h1>Side innhold</h1>
 			<section id="video">
 			</section>
@@ -115,7 +115,7 @@
 			<section id="google-btn">
 				<a class="btn">Google</a>
 			</section>
-		</div>
+		</aside>
 		<footer>
 			Webutvikling 2024
 		</footer>
