--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/400/400" alt="Bilde">
+				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -62,7 +62,7 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/400/400" alt="Bilde">
+				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -72,7 +72,7 @@
 				<header>
 					<h1>Overskrift 3</h1>
 				</header>
-				<img src="https://picsum.photos/400/400" alt="Bilde">
+				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -82,7 +82,7 @@
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/400/400" alt="Bilde">
+				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -92,7 +92,7 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/400/400" alt="Bilde">
+				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering">
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
