--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="font/css/all.css" rel="stylesheet">
+		<!--<link href="font/css/all.css" rel="stylesheet"> -->
 		<link rel="stylesheet" href="style.css">
 		<title>Søkemotoroptimalisering</title>
 		<meta charset="utf-8">
