--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nb-NO">
 	<head>
 		<!--<link href="font/css/all.css" rel="stylesheet"> -->
 		<link rel="stylesheet" href="style.css">
