--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nb-NO">
 	<head>
 		<!--<link href="font/css/all.css" rel="stylesheet"> -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
 		<title>Søkemotoroptimalisering</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
