--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
+				<img rel="preload" src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -49,7 +49,7 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
+				<img rel="preload" src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -59,7 +59,7 @@
 				<header>
 					<h1>Overskrift 3</h1>
 				</header>
-				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
+				<img rel="preload" src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -69,7 +69,7 @@
 				<header>
 					<h1>Overskrift 1</h1>
 				</header>
-				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
+				<img rel="preload" src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
@@ -79,7 +79,7 @@
 				<header>
 					<h1>Overskrift 2</h1>
 				</header>
-				<img src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
+				<img rel="preload" src="https://picsum.photos/600/600" alt="søkemotoroptimalisering" fetchpriority=high>
 				<p>
 					If you break the rules, try to leave or lose the game, you will die. Just like Saaaaw. Oh, wow. That's an intense line of questioning, Snuffles I'll tell you how I feel about school, Jerry. It's a waste of time.
 				</p>
